@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.94 2005/03/21 23:00:33 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.95 2005/03/22 02:41:13 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   21 Mar 2005; Preston Cody <codeman@gentoo.org>
-  took chroot out of grub_install command.
+  took chroot out of grub_install command. Added
+  'logfile=self._compile_logfile' to a number of spawn() calls.
 
   21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Changed chroot wrapper code in spawn() to write the wrapper the python way
